# geo-sensor-backend

./: .env.example  .gitignore  Dockerfile  README.md  SETUP_COMPLETE.md  alembic.ini  docker-compose.yml  ecosystem.config.js  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 087954f965f8_add_publications_and_publish_queue_.py  146fa2cf3221_merge_heads.py  19e1a2e14c43_initial_models_user_project_brand_query_.py  20260205_124843_add_pipeline_tables.py  20260205_154500_add_is_active_to_company_profile.py  20260206_113000_add_llm_provider_to_pipeline_categories.py  20260206_170600_add_workspace_tables.py  20260210_s2_001_pipeline_job_mode.py  54ca84b559b1_add_joined_at_to_workspace_members.py  5f6bc1cccd0a_make_pipeline_job_id_nullable_in_raw_.py  635a499ff462_add_performance_indexes.py  728517b00d87_add_performance_indexes.py  72e9e969f4ba_add_campaign_annotations_table.py  7bcc1f829057_merge_heads.py  b09dd2ff507f_add_dead_letter_jobs_table.py  bb919bd56568_add_analysis_models.py  f1c1c75f8d5b_add_schedule_configs_table.py  fbf740290fe7_add_insights_table.py  fc7f83892ef1_add_campaign_and_gallery_tables.py  s1_001_user_settings_fields.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: cache.py  config.py  constants.py  encryption.py  error_handlers.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  annotation.py  base.py  brand.py  campaign.py  citation.py  company_profile.py  dead_letter.py  (+20 more)
scripts/: measure_f1.py  seed_demo.py
tests/: conftest.py
(+161 files in other folders)
